--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -173,7 +173,7 @@ section {
 .section-text {
     font-size: 16px;
     color: #222;
-    line-height: 27px;
+    line-height: 1.6;
     letter-spacing: -1.5px;
     padding-top: 18px;
 }
@@ -445,7 +445,7 @@ strong {
 }
 
 section.board-link {
-    margin-top: 80px;
+    margin-top: 110px;
 }
 
 section.board-link ul {
@@ -460,7 +460,7 @@ section.board-link ul li {
 .board-link {
     margin-top: 80px;
     text-align: center;
-    margin-bottom: 93px;
+    margin-bottom: 119px;
 }
 
 .board-link .section-title {
