--- a/src/main/webapp/css/implant/digitalImplants.css
+++ b/src/main/webapp/css/implant/digitalImplants.css
@@ -69,7 +69,7 @@
     width: 100%;
     height: 100%;
     background: url(../../images/sub/implant/digital/digital_bg2.jpg) center top no-repeat fixed;
-    padding-top: 159px;
+    /* padding-top: 214px; */
     box-sizing: border-box;
     text-align: center;
     position: absolute;
@@ -101,11 +101,11 @@
     margin-top: 42px;
     background: #f5f5f5;
     padding-top: 27px;
-    padding-bottom: 127px;
+    padding-bottom: 158px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
     letter-spacing: -1px;
 }
 
@@ -115,7 +115,7 @@
 }
 
 .section02 {
-    margin-top: 111px;
+    margin-top: 115px;
     margin-bottom: 66px;
 }
 
@@ -213,7 +213,7 @@
 }
 
 .section04 ul {
-    margin-top: 123px;
+    margin-top: 152px;
     margin-left: -2.69%;
     display: inline-block;
     width: 100%;
@@ -231,7 +231,7 @@
 }
 
 .section04 ul li p {
-    padding-top: 20px;
+    padding-top: 22px;
     font-size: 97px;
     margin-bottom: 21px;
     letter-spacing: -1px;
@@ -261,7 +261,7 @@
 }
 
 .section05 {
-    margin-top: 135px;
+    margin-top: 157px;
 }
 
 .section05 .max-layout-width .text {
@@ -300,7 +300,7 @@
 
 .section05 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     letter-spacing: -1px;
 }
@@ -359,7 +359,7 @@
 }
 
 .section07 {
-    height: 608px;
+    height: 647px;
     margin-top: 232px;
 }
 
@@ -450,7 +450,7 @@
 }
 
 .fade-in-slider {
-    margin-top: 90px;
+    margin-top: 121px;
 }
 
 .fade-in-slider .img01 {
@@ -482,11 +482,11 @@
 }
 
 .section10 {
-    margin-top: 96px;
+    margin-top: 120px;
 }
 
 .section07 .section-title {
-    padding-top: 106px;
+    padding-top: 119px;
     color: #fff;
     padding-bottom: 11px;
 }
@@ -500,4 +500,20 @@
     line-height: 1.6;
     letter-spacing: -1px;
     font-weight: 300;
+}
+
+.fade-in-slider .swiper-slide .text h2 {
+    line-height: 1.3;
+    margin-bottom: 10px;
+    font-size: 33px;
+    letter-spacing: -2.3px;
+}
+
+.fade-in-slider .swiper-slide .text {
+    width: 360px;
+    padding-top: 60px;
+}
+
+.board-link .section-title {
+    line-height: 1.2;
 }
