--- a/src/main/webapp/css/implant/fullImplants.css
+++ b/src/main/webapp/css/implant/fullImplants.css
@@ -16,7 +16,7 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: -6px;
 }
 
@@ -24,11 +24,11 @@
     margin-top: 31px;
     background: #f5f5f5;
     padding-top: 20px;
-    padding-bottom: 144px;
+    padding-bottom: 178px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -47,7 +47,7 @@
 }
 
 .section02 {
-    margin-top: 94px;
+    margin-top: 119px;
 }
 
 .section02 .img01 {
@@ -65,6 +65,7 @@
     width: 720px;
     padding-right: 111px;
     box-sizing: border-box;
+    line-height: 1.6;
 }
 
 .section02 .text-box h2 + p {
@@ -78,6 +79,7 @@
 
 .section02 .move-title, .section04 .move-title {
     top: 0;
+    padding-top: 36px;
 }
 
 .section02 .section-text span {
@@ -85,7 +87,7 @@
 }
 
 .section03, .section04 {
-    margin-top: 130px;
+    margin-top: 153px;
 }
 
 .section03 .img01 {
@@ -107,11 +109,12 @@
 .section03 .move-title {
     top: 0;
     padding-left: 50%;
-    padding-top: 37px;
+    padding-top: 43px;
 }
 
 .section03 .section-text {
     width: 620px;
+    line-height: 1.6;
 }
 
 .section03 .link {
@@ -120,7 +123,7 @@
 }
 
 .section04 {
-    margin-top: 172px;
+    margin-top: 182px;
 }
 
 .section04 .max-layout-width .text {
@@ -134,7 +137,7 @@
 
 .section04 .image_box_right {
     max-width: 1276px;
-    height: 398px;
+    height: 381px;
     width: 50%;
     z-index: 10;
 }
@@ -146,7 +149,7 @@
 .section04 .section-title {
     padding-top: 71px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 95px;
     /* letter-spacing: -1px; */
     padding-left: 80px;
@@ -163,7 +166,7 @@
 
 .section04 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
 }
@@ -172,9 +175,9 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 75px;
+    height: 60px;
     background: #7f6a57;
-    top: -71px;
+    top: -79px;
     right: 0;
 }
 
@@ -182,9 +185,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 229px;
+    height: 215px;
     left: 0px;
-    bottom: -60px;
+    bottom: -56px;
 }
 
 .section04 .max-layout-width {
@@ -193,7 +196,7 @@
 }
 
 .section05 {
-    margin-top: 175px;
+    margin-top: 192px;
     height: 616px;
 }
 
@@ -259,7 +262,7 @@
 }
 
 .section06 {
-    padding: 99px 0 96px 0;
+    padding: 110px 0 110px 0;
     background: #f5f5f5;
 }
 
@@ -278,14 +281,14 @@
     width: 559px;
     font-size: 16px;
     padding: 22px 110px;
-    line-height: 1.6;
+    line-height: 1.5;
     letter-spacing: -1px;
     word-break: keep-all;
 }
 
 .table-middle {
     padding: 25px 0;
-    font-size: 21px;
+    font-size: 20px;
     font-weight: 500;
     box-sizing: border-box;
     border-left: 1px solid #8f8f8f;
@@ -416,7 +419,7 @@
 }
 
 .section02 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     padding-bottom: 8px;
 }
 
@@ -447,8 +450,8 @@
 }
 
 .section07 {
-    margin-top: 95px;
-    padding-bottom: 104px;
+    margin-top: 118px;
+    /* padding-bottom: 104px; */
 }
 
 .section07 .section-title, .section07 .section-text {
@@ -461,7 +464,7 @@
     margin-left: -3%;
     /* margin-top: 216px; */
     overflow: hidden;
-    height: 461px;
+    height: 392px;
     padding-top: 216px;
 }
 
@@ -478,7 +481,7 @@
 .section07 li h2 {
     font-size: 27px;
     color: #fff;
-    font-weight: bold;
+    font-weight: 500;
     margin-bottom: 32px;
     letter-spacing: -2px;
 }
@@ -544,7 +547,7 @@
 }
 
 .section03 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     padding-bottom: 10px;
 }
 
@@ -582,4 +585,22 @@
     background: #9b8b7e;
     color: #fff;
     font-size: 22px;
+}
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
 }
