--- a/src/main/webapp/css/implant/navigationImplants.css
+++ b/src/main/webapp/css/implant/navigationImplants.css
@@ -67,7 +67,7 @@
 }
 
 .section05 {
-    margin-top: 159px;
+    margin-top: 171px;
 }
 
 .section05 .max-layout-width .text {
@@ -89,7 +89,7 @@
 .section05 .section-title {
     padding-top: 100px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 134px;
     padding-left: 60px;
     letter-spacing: -2px;
@@ -107,7 +107,7 @@
 
 .section05 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
 }
 
@@ -159,7 +159,7 @@
     margin-top: 42px;
     background: #f5f5f5;
     padding-top: 24px;
-    padding-bottom: 176px;
+    padding-bottom: 194px;
 }
 
 .section01 .section-text {
@@ -183,12 +183,12 @@
 }
 
 .section02 {
-    margin-top: 101px;
-    margin-bottom: 101px;
+    margin-top: 110px;
+    margin-bottom: 110px;
 }
 
 .section02 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     /* letter-spacing: -2px; */
     font-size: 37px;
     padding-top: 30px;
@@ -197,7 +197,7 @@
 .section02 .section-text {
     width: 590px;
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     margin-top: 17px;
     color: #666;
 }
@@ -233,7 +233,7 @@
 
 .section03 {
     background: url(../../images/sub/implant/navigation/navi_bg.jpg)  no-repeat center;
-    padding-bottom: 0px;
+    /* padding-bottom: 15px; */
 }
 
 .section03 .image_box_left + .text {
@@ -248,7 +248,7 @@
 .section03 .text h2 {
     font-size: 34px;
     color: #fff;
-    font-weight: 500;
+    font-weight: 400;
     letter-spacing: -2px;
 }
 
@@ -294,6 +294,7 @@
     letter-spacing: -1.3px;
     font-size: 18px;
     padding-top: 147px;
+    font-weight: 300;
 }
 
 .section03 .text .img01 {
@@ -323,16 +324,16 @@
 }
 
 .section04 {
-    margin-top: 137px;
+    margin-top: 146px;
 }
 
 .section04 .section-title {
-    line-height: 1.35;
+    line-height: 1.25;
     margin-bottom: 12px;
 }
 
 .section04 .section-text {
-    line-height: 1.7;
+    line-height: 1.6;
     margin-bottom: 91px;
     color: #666;
 }
@@ -352,7 +353,7 @@
     background: #f5f5f5;
     width: 100%;
     position: absolute;
-    height: 315px;
+    height: 319px;
     left: 0px;
     bottom: -40px;
 }
@@ -549,8 +550,27 @@
 }
 
 .left-fade-slider-container {
-    margin-top: 218px;
+    margin-top: 221px;
     background: #fff;
     padding-top: 0px;
+    padding-bottom: 37px;
 }
     
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
+}
