--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -16,18 +16,18 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
 }
 
 .section01 .bg {
     margin-top: 42px;
     background: #f5f5f5;
     padding-top: 25px;
-    padding-bottom: 176px;
+    padding-bottom: 203px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -46,7 +46,7 @@
 }
 
 .section03 {
-    margin-top: 120px;
+    margin-top: 128px;
 }
 
 .section03 .max-layout-width .text {
@@ -90,7 +90,7 @@
 
 .section03 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
 }
@@ -99,7 +99,7 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 69px;
+    height: 57px;
     background: #7f6a57;
     top: -76px;
     right: 0;
@@ -109,9 +109,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 219px;
+    height: 210px;
     left: 0px;
-    bottom: -55px;
+    bottom: -66px;
 }
 
 .section03 .max-layout-width {
@@ -120,21 +120,21 @@
 }
 
 .section04 {
-    margin-top: 176px;
-    margin-bottom: 121px;
+    margin-top: 203px;
+    margin-bottom: 132px;
 }
 
 .section04 .section-title {
-    line-height: 1.3;
+    line-height: 1.2;
     /* letter-spacing: -2px; */
-    padding-top: 28px;
+    padding-top: 48px;
 }
 
 .section04 .section-text {
     width: 590px;
     word-break: keep-all;
-    line-height: 1.7;
-    margin-top: 16px;
+    line-height: 1.6;
+    margin-top: 12px;
 }
 
 .section04 .max-layout-width {
@@ -258,23 +258,23 @@
 }
 
 .section06 {
-    margin-top: 110px;
+    margin-top: 146px;
 }
 
 .section06 .section-title {
-    line-height: 1.3;
-    margin-bottom: 10px;
+    line-height: 1.25;
+    margin-bottom: 6px;
     padding-top: 30px;
 }
 
 .section06 .section-text {
-    line-height: 1.7;
+    line-height: 1.6;
     margin-bottom: 83px;
 }
 
 .section06 .image_box_left {
     max-width: 1315px;
-    height: 541px;
+    height: 477px;
     width: 51.52%;
     z-index: 1;
 }
@@ -298,7 +298,7 @@
 }
 
 .section06 .pager {
-    font-size: 17px;
+    font-size: 16px;
     color: #222;
     padding: 11px 0;
     position: relative;
@@ -401,7 +401,7 @@
 }
 
 .section02 {
-    margin-top: 105px;
+    margin-top: 116px;
 }
 
 .section02 .section-title, .section02 .section-text {
@@ -491,7 +491,7 @@ body .section02 li:first-child {
 }
 
 .section07 {
-    margin-top: 159px;
+    margin-top: 173px;
     height: 618px;
 }
 
@@ -576,4 +576,22 @@ body .section02 li:first-child {
 
 .section10 {
     margin-top: 122px;
+}
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
 }
