--- a/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/growthReriodOrthodontics.css
@@ -18,7 +18,7 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     display: inline-block;
 }
 
@@ -26,11 +26,11 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 31px;
-    padding-bottom: 68px;
+    padding-bottom: 82px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -49,7 +49,7 @@
 }
 
 .section02 {
-    margin-top: 88px;
+    margin-top: 110px;
 }
 
 .section02 .max-layout-width .text {
@@ -73,7 +73,7 @@
 
 .section02 .section-title {
     position: relative;
-    line-height: 1.2;
+    line-height: 1.25;
     margin-bottom: 4px;
     letter-spacing: -3px;
     text-align: center;
@@ -88,6 +88,7 @@
     padding-left: 47px;
     padding-top: 11px;
     padding-right: 21px;
+    color: #9c9c9c;
 }
 
 .section02 .bg {
@@ -178,7 +179,7 @@
 }
 
 .section04 {
-    margin-top: 117px;
+    margin-top: 141px;
 }
 
 .section04 .max-layout-width .text {
@@ -192,7 +193,7 @@
 
 .section04 .image_box_left {
     max-width: 1276px;
-    height: 521px;
+    height: 443px;
     width: 50%;
     z-index: 10;
 }
@@ -204,7 +205,7 @@
 .section04 .section-title {
     padding-top: 87px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 97px;
     padding-left: 60px;
     letter-spacing: -3px;
@@ -222,7 +223,7 @@
 
 .section04 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     letter-spacing: -1.2px;
 }
@@ -231,7 +232,7 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 72px;
+    height: 64px;
     background: #7f6a57;
     top: -75px;
 }
@@ -240,9 +241,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 281px;
+    height: 252px;
     right: 0px;
-    bottom: -61px;
+    bottom: -67px;
 }
 
 .section04 .max-layout-width {
@@ -361,7 +362,7 @@
     margin-top: 47px;
     background: #1f2742;
     padding-top: 201px;
-    padding-bottom: 150px;
+    padding-bottom: 146px;
 }
 
 .section03 .section-title {
@@ -440,5 +441,5 @@
 }
 
 .section07 {
-    margin-top: 170px;
+    margin-top: 203px;
 }
