--- a/src/main/webapp/css/orthodontics/misowonOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/misowonOrthodontics.css
@@ -18,19 +18,19 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     display: inline-block;
 }
 
 .section01 .bg {
     margin-top: 42px;
     background: #f5f5f5;
-    padding-top: 30px;
-    padding-bottom: 144px;
+    padding-top: 24px;
+    padding-bottom: 199px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -49,7 +49,7 @@
 }
 
 .section02 {
-    margin-top: 92px;
+    margin-top: 126px;
 }
 
 .section02 .max-layout-width .text {
@@ -63,7 +63,7 @@
 
 .section02 .image_box_right {
     max-width: 1268px;
-    height: 482px;
+    height: 442px;
     width: 50%;
     z-index: 10;
 }
@@ -75,7 +75,7 @@
 .section02 .section-title {
     padding-top: 94px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 105px;
     padding-left: 100px;
     /* letter-spacing: -1px; */
@@ -93,7 +93,7 @@
 
 .section02 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
     padding-left: 47px;
@@ -104,9 +104,9 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 72px;
+    height: 66px;
     background: #7f6a57;
-    top: -77px;
+    top: -74px;
     right: 0;
 }
 
@@ -114,9 +114,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 282px;
+    height: 239px;
     left: 0px;
-    bottom: -58px;
+    bottom: -54px;
 }
 
 .section02 .max-layout-width {
@@ -125,8 +125,8 @@
 }
 
 .section03 {
-    margin-top: 172px;
-    height: 549px;
+    margin-top: 188px;
+    height: 578px;
 }
 
 .section03 .bg {
@@ -141,7 +141,7 @@
 
 .section03 .max-layout-width {
     position: relative;
-    padding-top: 116px;
+    padding-top: 136px;
     text-align: center;
     color: #fff;
 }
@@ -191,11 +191,11 @@
 }
 
 .section04 {
-    margin-top: 130px;
+    margin-top: 145px;
 }
 
 .section04 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 4px;
     padding-top: 30px;
 }
@@ -266,7 +266,7 @@
 }
 
 .section05 {
-    margin-top: 166px;
+    margin-top: 177px;
     margin-bottom: -93px;
 }
 
@@ -292,7 +292,7 @@
 .table-middle {
     padding: 39px 0;
     font-size: 21px;
-    font-weight: bold;
+    font-weight: 500;
     box-sizing: border-box;
     border-left: 1px solid #8f8f8f;
     border-right: 1px solid #8f8f8f;
@@ -536,4 +536,32 @@
 
 .post-slider .text h2 {
     padding-top: 10px;
+}
+
+.fade-in-slider .swiper-slide .text h2 {
+    line-height: 1.25;
+    margin-bottom: 15px;
+}
+
+.fade-in-slider .title p {
+    color: #9c9c9c;
+
+}
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
 }
