--- a/src/main/webapp/css/orthodontics/partialOrthodontics.css
+++ b/src/main/webapp/css/orthodontics/partialOrthodontics.css
@@ -18,7 +18,7 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     display: inline-block;
 }
 
@@ -26,11 +26,11 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 23px;
-    padding-bottom: 147px;
+    padding-bottom: 172px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -51,7 +51,7 @@
 
 .section03 {
     height: 415px;
-    margin-top: 88px;
+    margin-top: 100px;
 }
 
 .section03 .max-layout-width {
@@ -66,10 +66,11 @@
 }
 
 .section03 .max-layout-width .text h2 {
-    line-height: 1.4;
+    line-height: 1.25;
     margin-bottom: 27px;
     font-size: 37px;
     letter-spacing: -2px;
+    font-weight: 300;
 }
 
 .section03 .max-layout-width .text p {
@@ -92,7 +93,7 @@
 }
 
 .section04 {
-    margin-top: 111px;
+    margin-top: 119px;
 }
 
 .section04 .section-title {
@@ -176,7 +177,7 @@
 
 
 .section05 {
-    margin-top: 156px;
+    margin-top: 170px;
 }
 
 .section05 .max-layout-width .text {
@@ -190,7 +191,7 @@
 
 .section05 .image_box_right {
     max-width: 1275px;
-    height: 482px;
+    height: 452px;
     width: 50%;
     z-index: 10;
 }
@@ -202,7 +203,7 @@
 .section05 .section-title {
     padding-top: 80px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 94px;
     padding-left: 100px;
     /* letter-spacing: -1px; */
@@ -220,7 +221,7 @@
 
 .section05 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
     padding-left: 47px;
@@ -231,7 +232,7 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 70px;
+    height: 62px;
     background: #7f6a57;
     top: -74px;
     right: 0;
@@ -241,7 +242,7 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 278px;
+    height: 246px;
     left: 0px;
     bottom: -58px;
 }
@@ -322,7 +323,7 @@
 
 .section02 {
     text-align: center;
-    padding-top: 75px;
+    padding-top: 90px;
 }
 
 .section02 .section-title {
@@ -376,5 +377,23 @@
 }
 
 .section06 {
-    margin-top: 166px;
+    margin-top: 189px;
+}
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
 }
