--- a/src/main/webapp/css/tooth/aesthetic.css
+++ b/src/main/webapp/css/tooth/aesthetic.css
@@ -26,7 +26,7 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     display: inline-block;
 }
 
@@ -34,11 +34,11 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 25px;
-    padding-bottom: 191px;
+    padding-bottom: 211px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -59,7 +59,7 @@
 
 .section02 {
     text-align: center;
-    padding-top: 88px;
+    padding-top: 115px;
 }
 
 .section02 .section-title {
@@ -116,7 +116,7 @@
 
 .section03 {
     text-align: center;
-    margin-top: 88px;
+    margin-top: 113px;
 }
 
 .section03 .section-title {
@@ -142,7 +142,7 @@
     font-size: 18px;
     color: #a8a8a8;
     background: #dfdfdf;
-    padding: 21px 0;
+    padding: 19px 0;
     cursor: pointer;
     letter-spacing: -1px;
 }
@@ -211,7 +211,7 @@
 
 .section04 .tab-contents img + div p {
     text-align: left;
-    line-height: 1.7;
+    line-height: 1.6;
     padding-right: 70px;
     word-break: keep-all;
     letter-spacing: -1px;
@@ -231,7 +231,7 @@
 }
 
 .section05 {
-    margin-top: 102px;
+    margin-top: 96px;
 }
 
 .section05 .max-layout-width .text {
@@ -245,7 +245,7 @@
 
 .section05 .image_box_right {
     max-width: 1276px;
-    height: 407px;
+    height: 376px;
     width: 50%;
     z-index: 10;
     margin-top: 65px;
@@ -258,7 +258,7 @@
 .section05 .section-title {
     padding-top: 100px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 84px;
     padding-left: 94px;
     /* letter-spacing: -1px; */
@@ -275,7 +275,7 @@
 
 .section05 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
     letter-spacing: -1.5px;
@@ -285,9 +285,9 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 74px;
+    height: 64px;
     background: #7f6a57;
-    top: -78px;
+    top: -67px;
     right: 0;
 }
 
@@ -295,9 +295,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 225px;
+    height: 209px;
     left: 0px;
-    bottom: -43px;
+    bottom: -56px;
 }
 
 .section05 .max-layout-width {
@@ -306,7 +306,7 @@
 }
 
 .section06 {
-    margin-top: 170px;
+    margin-top: 202px;
 }
 
 .section06 .section-title {
@@ -765,9 +765,9 @@ p.img.allceramic{
 
 .text-slider {
     background: #f3f3f3;
-    margin-top: 170px;
-    padding-top: 71px;
-    padding-bottom: 87px;
+    margin-top: 174px;
+    padding-top: 97px;
+    padding-bottom: 106px;
 }
 
 .text-slider .section-text {
@@ -796,7 +796,7 @@ p {
 .text-slider .slick-slide .text
 h2 {
     font-size: 31px;
-    line-height: 1.35;
+    line-height: 1.25;
     margin-bottom: 55px;
     color: #222;
     letter-spacing: -1.5px;
@@ -820,5 +820,23 @@ h2 {
 
 .tab-contents1 .left-fade-slider-container {
     background: none;
-    margin-top: 0;
+    margin-top: 2px;
+}
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
 }
