--- a/src/main/webapp/css/tooth/general.css
+++ b/src/main/webapp/css/tooth/general.css
@@ -26,7 +26,7 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     display: inline-block;
 }
 
@@ -34,11 +34,11 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 26px;
-    padding-bottom: 180px;
+    padding-bottom: 199px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -57,12 +57,12 @@
 }
 
 .section04 {
-    margin-top: 92px;
+    margin-top: 100px;
 }
 
 .tab-container3 .section04 {
-    margin-top: 168px;
-    margin-bottom: 193px;
+    margin-top: 175px;
+    margin-bottom: 83px;
 }
 
 .section04 .max-layout-width .text {
@@ -76,7 +76,7 @@
 
 .section04 .image_box_right {
     max-width: 1276px;
-    height: 380px;
+    height: 336px;
     width: 50%;
     z-index: 10;
     padding-top: 34px;
@@ -100,7 +100,7 @@
 .section04 .section-title {
     padding-top: 92px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 102px;
     padding-left: 54px;
     /* letter-spacing: -3px; */
@@ -117,7 +117,7 @@
 
 .section04 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
     letter-spacing: -1.2px;
@@ -127,7 +127,7 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 78px;
+    height: 64px;
     background: #7f6a57;
     top: -84px;
     right: 0;
@@ -137,7 +137,7 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 223px;
+    height: 192px;
     left: 0px;
     bottom: -55px;
 }
@@ -150,8 +150,8 @@
 
 
 .section20 {
-    height: 326px;
-    margin-top: 184px;
+    height: 354px;
+    margin-top: 185px;
     margin-bottom: -19px;
 }
 
@@ -172,6 +172,7 @@
     font-size: 26px;
     letter-spacing: -2px;
     font-weight: 300;
+    padding-top: 7px;
 }
 
 .section20 .max-layout-width .text p {
@@ -324,12 +325,12 @@
 
 .section02 {
     text-align: center;
-    margin-top: 76px;
+    margin-top: 106px;
 }
 
 .section02 .section-title {
-    line-height: 1.3;
-    margin-bottom: -4px;
+    line-height: 1.25;
+    margin-bottom: 1px;
 }
 
 .section02 .section-text {
@@ -417,7 +418,7 @@
 
 .section02-1 .tab-contents img + div p {
     text-align: left;
-    line-height: 1.7;
+    line-height: 1.6;
     word-break: keep-all;
     letter-spacing: -1.2px;
 }
@@ -436,7 +437,7 @@
 }
 
 .section03 {
-    margin-top: 106px;
+    margin-top: 115px;
 }
 
 .section03 h2 {
@@ -467,6 +468,7 @@
     line-height: 1.5;
     vertical-align: middle;
     padding: 20px 0;
+    letter-spacing: -1px;
 }
 
 .section03 .table img {
@@ -533,8 +535,8 @@
 }
 
 .section05 {
-    margin-top: 167px;
-    margin-bottom: -76px;
+    margin-top: 192px;
+    margin-bottom: -69px;
 }
 
 .section05 .max-layout-width {
@@ -589,7 +591,7 @@
 .section05 .text p {
     line-height: 1.5;
     font-size: 16px;
-    margin-bottom: 39px;
+    margin-bottom: 37px;
     letter-spacing: -1px;
 }
 
@@ -602,7 +604,7 @@
     float: left;
     width: 31.33333333%;
     margin-left: 2%;
-    height: 127px;
+    height: 122px;
     background: #373330;
     text-align: center;
     padding: 39px 0 35px 0;
@@ -729,7 +731,7 @@
 
 
 .section12 {
-    margin-top: 109px;
+    margin-top: 121px;
     margin-bottom: -17px;
     padding-bottom: 0px;
 }
@@ -882,12 +884,14 @@
 }
 
 .treatment-case {
-    margin-top: 88px;
+    /* margin-top: 88px; */
 }
 
 .fade-in-slider {
-    margin-top: 209px;
-    padding-bottom: 24px;
+    margin-top: 226px;
+    padding-bottom: 100px;
+    background: #f5f5f5;
+    padding-top: 95px;
 }
 
 .fade-in-slider .title p {
@@ -926,7 +930,7 @@
     color: #222;
     line-height: 27px;
     letter-spacing: -1px;
-    padding-top: 18px;
+    padding-top: 14px;
     font-weight: 400;
 }
 
@@ -946,14 +950,14 @@
 }
 
 .left-fade-slider-container {
-    margin-top: 101px;
+    margin-top: 57px;
 }
 
 .left-fade-slider-container {
-    margin-top: 21px;
-    background: #f5f5f5;
-    padding-top: 135px;
-    padding-bottom: 158px;
+    /* margin-top: 21px; */
+    background: #ffffff;
+    /* padding-top: 135px; */
+    /* padding-bottom: 158px; */
     margin-bottom: -78px;
 }
 
@@ -1022,4 +1026,33 @@
 
 .section03 .table .img-col td {
     padding: 0;
+}
+
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
+}
+
+.fade-in-slider .slider-next {
+    background: #ffffff url(../../images/sub/implant/digital/right_arrow01.png) no-repeat center;
+    left: 87px;
+
+}
+
+.fade-in-slider .slider-prev {
+    background: #ffffff url(../../images/sub/implant/digital/left_arrow01.png) no-repeat center;
 }
