--- a/src/main/webapp/css/tooth/scaling.css
+++ b/src/main/webapp/css/tooth/scaling.css
@@ -18,7 +18,7 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     display: inline-block;
 }
 
@@ -26,11 +26,11 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 24px;
-    padding-bottom: 155px;
+    padding-bottom: 225px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
 }
 
 .section01 .section-text:first-child {
@@ -51,12 +51,12 @@
 
 .section02 {
     text-align: center;
-    padding-top: 80px;
+    padding-top: 113px;
 }
 
 .section02 .section-title {
     margin-bottom: 45px;
-    line-height: 1.35;
+    line-height: 1.25;
 }
 
 .section02 ul {
@@ -67,7 +67,7 @@
 .section02 li {
     width: 23%;
     float: left;
-    padding-top: 25px;
+    padding-top: 31px;
     padding-bottom: 31px;
     margin-left: 2%;
     box-sizing: border-box;
@@ -83,7 +83,7 @@
 }
 
 .section02 li p {
-    line-height: 1.5;
+    line-height: 1.4;
     font-size: 17px;
     font-weight: 500;
     color: #222;
@@ -113,7 +113,7 @@
 }
 
 .section03 {
-    margin-top: 112px;
+    margin-top: 129px;
 }
 
 .section03 .max-layout-width .text {
@@ -140,7 +140,7 @@
 .section03 .section-title {
     padding-top: 87px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 92px;
     padding-left: 74px;
     /* letter-spacing: -1px; */
@@ -157,7 +157,7 @@
 
 .section03 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
 }
@@ -166,7 +166,7 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 76px;
+    height: 68px;
     background: #7f6a57;
     top: -76px;
     right: 0;
@@ -176,7 +176,7 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 217px;
+    height: 212px;
     left: 0px;
     bottom: -54px;
 }
@@ -227,7 +227,7 @@
 }
 
 .section04 {
-    margin-top: 195px;
+    margin-top: 208px;
 }
 
 .section04 .section-title {
@@ -310,8 +310,8 @@
 }
 
 .section05 {
-    height: 333px;
-    margin-top: 179px;
+    height: 398px;
+    margin-top: 184px;
 }
 
 .section05 .max-layout-width {
@@ -322,19 +322,19 @@
 }
 
 .section05 .max-layout-width .text {
-    padding-top: 79px;
+    padding-top: 124px;
 }
 
 .section05 .max-layout-width .text h2 {
-    line-height: 1.4;
-    margin-bottom: 28px;
+    line-height: 1.25;
+    margin-bottom: 25px;
     font-size: 36px;
     letter-spacing: -2.5px;
 }
 
 .section05 .max-layout-width .text p {
     font-size: 17px;
-    line-height: 1.7;
+    line-height: 1.6;
     letter-spacing: -1px;
 }
 
@@ -353,19 +353,19 @@
 }
 
 .section06 {
-    padding-top: 114px;
+    padding-top: 149px;
     background: #f5f5f5;
-    padding-bottom: 165px;
+    padding-bottom: 167px;
 }
 
 .section06 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 6px;
     font-size: 35px;
 }
 
 .section06 .section-text {
-    line-height: 1.7;
+    line-height: 1.6;
     margin-bottom: 29px;
 }
 
@@ -445,7 +445,7 @@
 
 .section06 .text > div {
     padding-left: 54px;
-    padding-top: 19px;
+    padding-top: 43px;
 }
 
 .section09 {
@@ -526,12 +526,13 @@
 }
 
 .text-slider {
-    margin-top: 104px;
-    padding-bottom: 38px;
+    margin-top: 108px;
+    padding-bottom: 43px;
 }
 
 .text-slider .section-text {
     margin-bottom: 45px;
+    color: 9c9c9c;
 }
 
 
@@ -544,8 +545,11 @@
 
 .text-slider .slick-slide .text h2 {
     font-size: 31px;
-    line-height: 1.35;
+    line-height: 1.25;
     margin-bottom: 55px;
     color: #222;
     letter-spacing: -1.5px;
 }
+
+.text-slider .section-title {
+    line-height: 1.25;
