--- a/src/main/webapp/css/tooth/wisdom.css
+++ b/src/main/webapp/css/tooth/wisdom.css
@@ -18,7 +18,7 @@
 }
 
 .section01 .section-title {
-    line-height: 1.3;
+    line-height: 1.25;
     display: inline-block;
 }
 
@@ -26,11 +26,11 @@
     margin-top: 43px;
     background: #f5f5f5;
     padding-top: 26px;
-    padding-bottom: 220px;
+    padding-bottom: 234px;
 }
 
 .section01 .section-text {
-    line-height: 1.8;
+    line-height: 1.6;
     letter-spacing: -1.5px;
 }
 
@@ -53,7 +53,7 @@
 
 .section02 {
     text-align: center;
-    padding-top: 80px;
+    padding-top: 107px;
 }
 
 .section02 .section-title {
@@ -68,8 +68,8 @@
 .section02 li {
     width: 23%;
     float: left;
-    padding-top: 25px;
-    padding-bottom: 31px;
+    padding-top: 31px;
+    padding-bottom: 30px;
     margin-left: 2%;
 }
 
@@ -83,7 +83,7 @@
 }
 
 .section02 li p {
-    line-height: 1.5;
+    line-height: 1.4;
     font-size: 17px;
     font-weight: 500;
     color: #222;
@@ -113,7 +113,7 @@
 }
 
 .section03 {
-    margin-top: 113px;
+    margin-top: 123px;
 }
 
 .section03 .max-layout-width .text {
@@ -139,7 +139,7 @@
 .section03 .section-title {
     padding-top: 86px;
     position: relative;
-    line-height: 1.3;
+    line-height: 1.25;
     margin-bottom: 101px;
     padding-left: 94px;
     letter-spacing: -1px;
@@ -156,7 +156,7 @@
 
 .section03 .section-text {
     word-break: keep-all;
-    line-height: 1.7;
+    line-height: 1.6;
     position: relative;
     text-align: right;
 }
@@ -165,9 +165,9 @@
     content: '';
     position: absolute;
     width: 3px;
-    height: 82px;
+    height: 70px;
     background: #7f6a57;
-    top: -93px;
+    top: -78px;
     right: 0;
 }
 
@@ -175,9 +175,9 @@
     background: #f5f5f5;
     width: 64.65%;
     position: absolute;
-    height: 199px;
+    height: 192px;
     left: 0px;
-    bottom: -56px;
+    bottom: -57px;
 }
 
 .section03 .max-layout-width {
@@ -326,4 +326,22 @@
 
 .post-slider .text h2 {
     padding-top: 10px;
+}
+
+  section.board-link {
+    margin-top: 125px;
+}
+
+.board-link {
+    margin-bottom: 127px;
+}
+
+
+.section-text {
+
+    padding-top: 12px;
+}
+
+.board-link .section-title {
+    line-height: 1.25;
 }
