--- a/src/main/webapp/css/board/boardWrite.css
+++ b/src/main/webapp/css/board/boardWrite.css
@@ -127,3 +127,14 @@ textarea {
 .button-box > div {
     display: inline-block;
 }
+
+.filename {
+    width: 280px;
+    height: 46px;
+    border: 1px solid #d9d9d9;
+    display: inline-block;
+    float: left;
+    box-sizing: border-box;
+    line-height: 44px;
+    padding-left: 10px;
+}
