체크 표시 검정색 이미지로 변경

--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -541,7 +541,7 @@ section.board-link ul li {
     font-weight: bold;
     font-size: 20px;
     top: 1px;
-    background: url(../images/sub/orthodontics/grow/check_small.png);
+    background: url(../images/sub/tooth/aesthetic/check_small.png) no-repeat;
     width: 28px;
     height: 24px;
     text-indent: -9999px;
