--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1089,6 +1089,11 @@ body .section07 .bx-pager-link span + span {
     margin-left: 2%;
     position: relative;
     cursor: pointer;
+    overflow: hidden;
+}
+
+.section02 li:hover img {
+    transform: scale(1.1);
 }
 
 .section02 li div {
@@ -1129,6 +1134,7 @@ body .section07 .bx-pager-link span + span {
 
 .section02 li img {
     width: 100%;
+    transition: transform 300ms;
 }
 
 .section02 li:hover div.nomal {
