--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -40,8 +40,17 @@
     display: inline-block;
     vertical-align: top;
     width: 25%;
+    overflow: hidden;
 }
 
+
+.post-slider .posts .slide:hover .img {
+    transform: scale(1.1);
+}
+
+.post-slider .posts .slide:hover .text {
+    height: 100%;
+}
 
 .post-slider .posts .post-item {
     position: relative;
@@ -75,7 +84,8 @@
 
 .post-slider .swiper-slide {
     position: relative;
-    cursor: pointer
+    cursor: pointer;
+    overflow: hidden;
 }
 
 .post-slider .swiper-slide:hover .text {
@@ -84,10 +94,12 @@
 
 .post-slider .text {
     position: absolute;
-    top: 0;
-    height: 100%;
+    bottom: 0;
+    height: 0;
     background: rgba(139,125,114, 0.95);
-    opacity: 0;
+    opacity: 0.9;
+    transition: height 0.45s ease;
+    will-change: height;
 }
 
 .post-slider .posts .post-item .img img {
@@ -289,6 +301,7 @@
     width: 100%;
     height: 283px;
     max-width: 370px;
+    transition: transform 300ms;
 }
 
 
