기능수정: 메인 1300px 해상도에서 슬라이드가 아래로 내려가는 부분 수정

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -1239,3 +1239,9 @@ body .section07 .bx-pager-link span + span {
 .section-text {
     color: #9c9c9c
 }
+
+@media screen and (max-width:1540px) {
+    .section05 .doctor-slider {
+        width: 20.6%;
+    }
+}
