--- a/src/main/webapp/css/mypage/mypageConsult.css
+++ b/src/main/webapp/css/mypage/mypageConsult.css
@@ -57,36 +57,50 @@
 }
 
 .search {
-    width: 620px;
-    margin: 0 auto;
-    overflow: hidden;
-    margin-bottom: 110px;
+    max-width: 660px;
+    width: 100%;
+    margin: 60px auto;
+    padding-left: 200px;
+    position: relative;
 }
 
-.search span {
-    float: left;
-}
-
-.search span select, .search span span {
-    height: 54px;
-    border: 1px solid #e0e0e0;
-    box-sizing: border-box;
-}
-
-.search span select {
+.search .select-type {
     width: 190px;
-    outline: none;
-    margin-right: 10px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 50px;
+    border: 1px solid #222;
+    color: #222;
+    font-size: 16px;
+    padding: 0 19px;
+    background: #fdfdfd;
 }
 
-.search span span {
-    width: 420px;
-    padding: 13px 0 13px 30px;
+.search .search-input {
+    width: 100%;
+    padding-right: 75px;
+    border: 1px solid #222;
+    color: #222;
+    height: 50px;
+    line-height: 50px;
+    outline: none;
+    background: #fdfdfd;
 }
 
-.search input {
-    font-size: 17px;
-    width: 90%;
-    border: none;
-    outline: none;
+.search .btn {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 60px;
+    height: 50px;
+    border: 0;
+    background: transparent url(../../images/sub/board/icon01.png) no-repeat center;
+    text-indent: -9999px;
+    cursor: pointer;
+}
+
+.search-container {
+    padding: 8px 0;
+    margin-bottom: 95px;
 }
