기능 수정: 메인 페이지 슬라이드 수정

--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -339,6 +339,7 @@ header.active .fixed {
     height: 56px;
     background: #88bdbb;
     position: relative;
+    overflow: hidden;
 }
 
 .header-banner-slider-continer01 .slide-item-box {
