--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -144,7 +144,7 @@ header .header-banner-slider-continer .bx-wrapper {
 }
 
 header .cmmn-nav nav ol li {
-    width: 20%;
+    width: 16.6666666666666666%;
     float: left;
     font-size: 15px;
     cursor: pointer;
@@ -163,6 +163,18 @@ header .cmmn-nav nav ol li a {
     display: inline-block;
     letter-spacing: -1.5px;
     font-size: 16.5px;
+    position: relative;
+}
+
+header .cmmn-nav nav ol a.active:before,
+header .cmmn-nav nav ol a:hover:before {
+    content: '';
+    position: absolute;
+    height: 4px;
+    width: 100%;
+    display: block;
+    background: #cec4bd;
+    bottom: -31px;
 }
 
 header .cmmn-nav nav ol li:first-child {
@@ -427,4 +439,46 @@ header .banner-close img {
 header .banner-close-box {
     display: inline-block;
     cursor: pointer;
+}
+
+header .menu {
+    width: 50px;
+    height: 50px;
+    margin-top: -15px;
+    position: relative;
+    cursor: pointer;
+    margin-left: 78px;
+}
+
+header .menu:before {
+    width: 24px;
+    top: 16px;
+}
+
+header .menu .icon {
+    width: 30px;
+    top: 24px;
+}
+
+header .menu:after {
+    width: 16px;
+    top: 32px;
+}
+
+header .menu:before,
+header .menu:after,
+header .menu .icon {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 2px;
+    left: 10px;
+    background: #000;
+    opacity: 1;
+    transition: all .3s ease;
+}
+
+header .menu:hover:before,
+header .menu:hover:after {
+    width: 30px;
 }
