기능 수정: 카테고리 하단 라인 추가

--- a/src/main/webapp/css/clientHeader.css
+++ b/src/main/webapp/css/clientHeader.css
@@ -207,6 +207,7 @@ header .nav-detail {
     z-index: 1;
     letter-spacing: -1px;
     clear: both;
+    border-top: 1px solid #bbb;
 }
 
 header .nav-detail .max-layout-width {
@@ -339,7 +340,6 @@ header .fixed-box {
     width: 100%;
     max-width: 1905px;
     display: inline-block;
-    border-bottom: 1px solid #bbb;
 }
 
 header .fixed-box > div {
